concord-common: deprecate toByteArray method